# git-sha2-tool

./: README.md  pyproject.toml  setup.py
git_sha2/: cli.py
