[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sha2-tool"
version = "1.0.1"
description = "CLI to compute SHA-256 of files from Git URLs"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Vinayak Bipin Joshi", email="vinayak.joshi6803@gmail.com" }
]
license = {text = "MIT"}
dependencies = [
  "requests"
]

[project.urls]
Homepage = "https://pypi.org/project/git-sha2-tool/"
Repository = "https://github.com/vinayakjoshi6803/git-sha2-tool"

[project.scripts]
git-sha2 = "git_sha2.cli:main"
